# word2vec

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: rust-grcov.yml  rust.yml
examples/: example.rs
src/: errors.rs  lib.rs  utils.rs  vectorreader.rs  wordclusters.rs  wordvectors.rs
tests/: tests.rs
